# simpleson

./: .gitignore  CMakeLists.txt  JSON.h  README.md  appveyor-esp.yml  appveyor.yml  component.mk  doxygen.txt  json.cpp  json.h  release_checklist.md  sdkconfig.defaults
esp/: setup.sh
examples/: objectarray.cpp  rootarray.cpp
main/: CMakeLists.txt  esp32_main.cpp
test/: CMakeLists.txt  add_objects.cpp  jarray.cpp  jarray_istream.cpp  jarray_parser.cpp  jdictionary.cpp  jnumber.cpp  jobject.cpp  jobject_istream.cpp  jobject_parser.cpp  jtranscriber.cpp  jtype.cpp  jvalue.cpp  parsing.cpp  parsing_characters.cpp  parsing_read_digits.cpp  parsing_tlws.cpp  pretty_array.cpp  pretty_object.cpp  random.cpp  remove_leading_spaces.cpp  test.h  unicode.cpp
